# make_dictionary_item_key

./: README.md  note
contract/: Cargo.toml
contract/src/: main.rs
