[package]
name = "contract"
version = "0.1.0"
edition = "2018"

[dependencies]
casper-contract = "1.4.3"
casper-types = "1.4.6"
base64 = { version = "0.13.0", default-features = false, features = ["alloc"] }

[[bin]]
name = "contract"
path = "src/main.rs"
bench = false
doctest = false
test = false

[profile.release]
codegen-units = 1
lto = true

